# pension-planning-agent

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TESTS.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: book.yml  ci.yml  pre-commit.yml  release.yml
.streamlit/: secrets.toml
book/: _config.yml
book/docs/: api.md  index.md  marimo.md  reports.md
pdoc/: index.html  pension_planning_agent.html  search.js
pdoc/pension_planning_agent/: add.html  agent.html  streamlit.html  system_prompt.html
src/: app.py  settings.py
src/pension_planning_agent/: agent.py  schemas.py  streamlit.py  system_prompt.py
src/tests/: test_agent.py  test_schemas.py  test_trivial.py
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_a48428de63350291___init___py.html  z_a48428de63350291_add_py.html  z_a48428de63350291_agent_py.html  z_a48428de63350291_streamlit_py.html  z_a48428de63350291_system_prompt_py.html
tests/html-report/: report.html
