[project]
name = 'pension-planning-agent'
version = "0.0.0"
description = "AI Agent for personalized pension planning, offering savings projections, retirement income analysis, and contribution optimization for long-term financial security."
# Please add authors and correct the email...
authors = [{name='VanekPetr', email= 'VanekPetr@mailinator.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
repository = "https://github.com/VanekPetr/pension-planning-agent"

[dependency-groups]
dev = [
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pension-planning-agent"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/pension-planning-agent"
]

[tool.bandit]
exclude_dirs = ["tests"]
