[project]
name = 'pension-planning-agent'
version = "0.0.0"
description = "AI Agent for personalized pension planning, offering savings projections, retirement income analysis, and contribution optimization for long-term financial security."
authors = [{name='Petr Vanek', email= 'petrr.vanekk@gmail.com'}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.7",
    "logfire>=3.4.0",
    "loguru>=0.7.3",
    "pydantic-ai>=0.0.20",
    "pydantic-settings>=2.7.1",
    "streamlit>=1.41.1",
    "supabase>=2.12.0",
    "toml>=0.10.2",
    "uvicorn>=0.34.0",
]

[project.urls]
repository = "https://github.com/VanekPetr/pension-planning-agent"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pension_planning_agent"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/pension_planning_agent"
]

[tool.bandit]
exclude_dirs = ["tests"]
